test/Fail/Polarity-pragma-out-of-scope.agda
{-# OPTIONS --warning=error #-}

postulate
  F : Set → Set

module _ where

  {-# POLARITY F + #-}
